# onyx

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
sample-vault/: 94550BA6-5AAF-44C6-8CA6-2B1A3D813560-list 2.md  94550BA6-5AAF-44C6-8CA6-2B1A3D813560-list.md  Audio2.0.md  Daily-2026-07-10.md  Dataview Demo.md  Feature Roadmap.md  HCM Demo.md  Knowledge Base.md  Markdown Showcase.md  Nimbus Field Notes.md  PPO Idea.md  Planning the 2028 Wedding 2.md  Presentation Example.md  Pro Power Onboard 2.md  Pro Power Onboard 3.md  Pro Power Onboard Ford.com.md  Pro Power Onboard.md  Project Apollo 2.md  Project Apollo.md  Project Nimbus.md  Q3 Marketing Budget.md  Roadmap.md  StreamWeaver.md  Welcome.md  todo.md
sample-vault/Daily/: 2026-06-21.md  2026-06-22.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-10.md  2026-07-11.md
sample-vault/Onyx/: Overview.md  Roadmap.md
sample-vault/People/: Dana.md  Marcus.md  Priya.md
sample-vault/Projects/: Alpha.md  Aurora Mobile App.md  Aurora Web Dashboard.md  Beta.md  Onyx Roadmap.md  Project Aurora.md
scripts/: bump-version.sh  release-signed.sh  release.sh
src/: App.tsx  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  commands.rs  import.rs  index.rs  lib.rs  main.rs  vault.rs  vector.rs
src-tauri/src/atoms/: extract.rs  mod.rs  policy.rs  relate.rs  signals.rs  storage.rs
src-tauri/src/night/: events.rs  mod.rs  power.rs  processor.rs  queue.rs  storage.rs
src/commands/: registry.ts
src/components/: TabBar.tsx  (+20 more)
(+62 files in other folders)
