[package]
name = "onyx"
version = "0.1.12"
description = "Onyx — an AI-augmented local-first knowledge base"
authors = ["Onyx"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "onyx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
notify = "8"
pulldown-cmark = "0.13"
rusqlite = { version = "0.37", features = ["bundled"] }
walkdir = "2"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
sqlite-vec = "0.1"
pdf-extract = "0.7"
zip = "2"
quick-xml = "0.37"
base64 = "0.22"

